<resources>
    <string name="app_name">Calculadora</string>
    <string name="tvTitulo">Calculadora</string>
    <string name="etNum1">Número 1</string>
    <string name="etNum2">Número 2</string>
    <string name="btnSumar">+</string>
    <string name="btnRestar">-</string>
    <string name="btnMultiplicar">x</string>
    <string name="btnDividir">/</string>
    <string name="tvResultado"></string>
    <string name="btnLimpiar">Limpiar</string>
</resources>